--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   carousel_slider: ^4.2.0
   carousel_indicator: ^1.0.6
   http: ^0.13.5
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
