--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   flutter_vlc_player: ^7.1.5
   app_settings: ^4.1.8
   wakelock: ^0.6.2
+  awesome_dialog: ^3.0.2
+  url_launcher: ^6.1.7
   
   
 
